Fixed issue where resize handles are covered by nested spaces

--- a/react-spaces/src/components/Space.scss
+++ b/react-spaces/src/components/Space.scss
@@ -1,7 +1,7 @@
 .spaces-space {
 	position: absolute;
 	overflow: hidden;
-	z-index: 99999;
+	z-index: 1;
 
 	&:after {
 		content: "";
